Avoid IndexOutOfBoundsException